--- a/app/front/src/index.css
+++ b/app/front/src/index.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 @plugin 'tailwindcss-animate';
 
@@ -52,7 +52,7 @@
   If we ever want to remove these styles, we need to add an explicit border
   color utility to any element that depends on these defaults.
 */
-@layer base {
+/* @layer base {
   *,
   ::after,
   ::before,
@@ -132,7 +132,7 @@
       background-color: #f9f9f9;
     }
   }
-}
+} */
 
 @layer base {
   :root {
